Deletion of ReshardingCoordinatorService state document is not idempotent

XMLWordPrintableJSON

    • Sharding NYC
    • Fully Compatible
    • ALL
    • v7.1, v7.0, v6.0, v5.0
    • Sharding NYC 2023-09-04, Sharding NYC 2023-09-18
    • 15
    • 4
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      It is possible for a ReshardingCoordinatorService to retry deletion of state document as part of this retry loop due to a transient error. The retry doesn't check if it had already deleted the state document previously and can fail here. This causes the resharding operation to fail with a fatal error and halt the config server node. We should make the deletion idempotent to avoid this scenario from happening.

            Assignee:
            Abdul Qadeer
            Reporter:
            Abdul Qadeer
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: