SERVER-79086 Make Deletion of Resharding State Document Idempotent

(cherry picked from commit c73f43f7297d6da88163b64860f8912c471d8586 with
changes)